[package]
name = "xenotech"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
parry2d = "0.13.5"
nalgebra = "0.32.3"
bitflags = "2.4.1"
itertools = "0.12.0"
rand = "0.8.5"
noise = "0.8.2"